--- a/.env
+++ b/.env
@@ -1,3 +1,3 @@
-PROVIDER_KEY=''
-ETHERSCAN_KEY=''
+PROVIDER_KEY='2625cdc63440401f976ac02b8689959b'
+ETHERSCAN_KEY='SKS2Y7FFARINVP6TRFJYV94I85KKTFPSD8'
 DEPLOY_WALLET_PRIVATE_KEY=''
